🚀 add page loading feature

--- a/index.html
+++ b/index.html
@@ -13,9 +13,60 @@
     />
     <!-- END GOOGLE FONTS -->
     <title>Jersy Hub | Be game day ready with our football t-shirts</title>
+    <style>
+      body {
+        overflow: hidden;
+      }
+      .loader__wrapper {
+        font-family: Roboto;
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        inset: 0;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 24px;
+        z-index: 999999999;
+        background: white;
+      }
+      .loader__title {
+        font-size: 36px;
+        line-height: 40px;
+        font-weight: 600;
+      }
+      .loader__hightlight {
+        color: #13858f;
+      }
+      .loader__wait {
+        font-size: 14px;
+        line-height: 20px;
+        font-style: italic;
+        font-weight: 500;
+        color: #737278;
+      }
+    </style>
   </head>
   <body class="antialiased font-roboto">
+    <!-- page loader -->
+    <div id="loader">
+      <div class="loader__wrapper">
+        <h1 class="loader__title">
+          Wecome to
+          <span class="loader__hightlight">Jersy Hub</span>
+        </h1>
+        <p class="loader__wait">wait loading to complete ...</p>
+        <img src="/src/assets/icons/loader.gif" alt="loader" />
+      </div>
+    </div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
+  <script>
+    window.addEventListener('load', function () {
+      document.querySelector('#loader')?.remove()
+      document.body.style.overflow = 'auto'
+    })
+  </script>
 </html>
