🚀 add customers table

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       }
       .loader__title {
         font-size: 36px;
-        line-height: 40px;
+        line-height: 40px !important;
         font-weight: 600;
       }
       .loader__hightlight {
@@ -53,7 +53,7 @@
     <div id="loader">
       <div class="loader__wrapper">
         <h1 class="loader__title">
-          Wecome to
+          Welcome to
           <span class="loader__hightlight">Jersy Hub</span>
         </h1>
         <p class="loader__wait">wait loading to complete ...</p>
