🚀 improve customers views & some ui improvements

--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       </div>
     </div>
     <div id="root"></div>
+    <div id="dialog"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
