🚀 change website name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <!-- END GOOGLE FONTS -->
-    <title>Jersy Hub | Be game day ready with our football t-shirts</title>
+    <title>Mega Mart | Be game day ready with our football t-shirts</title>
     <style>
       body {
         overflow: hidden;
@@ -54,7 +54,7 @@
       <div class="loader__wrapper">
         <h1 class="loader__title">
           Welcome to
-          <span class="loader__hightlight">Jersy Hub</span>
+          <span class="loader__hightlight">Mega Mart</span>
         </h1>
         <p class="loader__wait">wait loading to complete ...</p>
         <img src="/src/assets/icons/loader.gif" alt="loader" />
