📍create shared admin statistics card

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
     <!-- END GOOGLE FONTS -->
-    <title>Mega Mart | Be game day ready with our football t-shirts</title>
+    <title>Mega Mart | The ultimate online shopping destination</title>
     <style>
       body {
         overflow: hidden;
