--- a/client/index.html
+++ b/client/index.html
@@ -13,63 +13,9 @@
     />
     <!-- END GOOGLE FONTS -->
     <title>Mega Mart | The ultimate online shopping destination</title>
-    <style>
-      body {
-        overflow: hidden;
-      }
-      .loader__wrapper {
-        font-family: Roboto;
-        position: fixed;
-        width: 100%;
-        height: 100%;
-        inset: 0;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        gap: 24px;
-        z-index: 999999999;
-        background: white;
-      }
-      .loader__title {
-        font-size: 36px;
-        line-height: 40px !important;
-        font-weight: 600;
-      }
-      .loader__hightlight {
-        color: #13858f;
-      }
-      .loader__wait {
-        font-size: 14px;
-        line-height: 20px;
-        font-style: italic;
-        font-weight: 500;
-        color: #737278;
-      }
-      .loader__icon {
-        height: 20px;
-      }
-    </style>
+    <style></style>
   </head>
   <body class="antialiased font-roboto">
-    <!-- page loader -->
-    <div id="loader">
-      <div class="loader__wrapper">
-        <h1 class="loader__title">
-          Welcome to
-          <span class="loader__hightlight">Mega Mart</span>
-        </h1>
-        <p class="loader__wait">wait loading to complete ...</p>
-        <img
-          src="/src/assets/icons/loader.gif"
-          alt="loader"
-          class="loader__icon"
-        />
-      </div>
-      <div class="loader__error">
-        <p>Something went wrong</p>
-      </div>
-    </div>
     <div id="root"></div>
     <div id="dialog"></div>
     <script type="module" src="/src/main.tsx"></script>
